# ai-code-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  supervisord.conf
static/: index.html  script.js  style.css
